add app version to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = media-to-ascii
+version = 1.0
 description = A utility to generate ASCII art from an image or video.
 author = Julio Salceda
 license = GNU GPL
@@ -10,7 +11,7 @@ classifiers =
 
 [options]
 packages =
-    media2ascii
+    media2ascii>=1.0
 install_requires =
     certifi>=2021.10.8
     charset-normalizer>=2.0.12
