fixed package format

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ classifiers =
 
 [options]
 packages =
-    media2ascii>=1.0
+    media2ascii
 install_requires =
     certifi>=2021.10.8
     charset-normalizer>=2.0.12
